Allow generating PDB in Release builds

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -54,6 +54,21 @@ int main(int argc, char *argv[]) {
   if(DISPATCH_HAVE_EXTENDED_SLPI_22000)
     add_compile_definitions(DISPATCH_HAVE_EXTENDED_SLPI_22000)
   endif()
+
+  option(DISPATCH_ENABLE_PDB OFF)
+  if (DISPATCH_ENABLE_PDB AND CMAKE_BUILD_TYPE STREQUAL "Release")
+    function(append value)
+      foreach(variable ${ARGN})
+        set(${variable} "${${variable}} ${value}" PARENT_SCOPE)
+      endforeach(variable)
+    endfunction()
+
+    append("/Zi" CMAKE_C_FLAGS CMAKE_CXX_FLAGS)
+    # /DEBUG disables linker GC and ICF, but we want those in Release mode.
+    append("/DEBUG /OPT:REF /OPT:ICF"
+          CMAKE_EXE_LINKER_FLAGS CMAKE_MODULE_LINKER_FLAGS
+          CMAKE_SHARED_LINKER_FLAGS)
+  endif()
 endif()
 
 set(CMAKE_C_STANDARD 11)
