[CMake] Install PDB files

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -169,3 +169,5 @@ install(TARGETS dispatch
         ARCHIVE DESTINATION ${INSTALL_TARGET_DIR}
         LIBRARY DESTINATION ${INSTALL_TARGET_DIR}
         RUNTIME DESTINATION bin)
+
+install(FILES $<TARGET_PDB_FILE:dispatch> DESTINATION bin OPTIONAL)
