--- a/src/BlocksRuntime/CMakeLists.txt
+++ b/src/BlocksRuntime/CMakeLists.txt
@@ -36,3 +36,5 @@ install(TARGETS BlocksRuntime
         ARCHIVE DESTINATION ${INSTALL_TARGET_DIR}
         LIBRARY DESTINATION ${INSTALL_TARGET_DIR}
         RUNTIME DESTINATION bin)
+
+install(FILES $<TARGET_PDB_FILE:BlocksRuntime> DESTINATION bin OPTIONAL)
